CSS: spacing fixes for codelikes

--- a/css/components/elements/_misc-content.scss
+++ b/css/components/elements/_misc-content.scss
@@ -147,10 +147,6 @@ article.theorem-like .emphasis {
     margin-bottom: 1em;
 }
 
-.code-display {
-  overflow-x: auto;
-}
-
 .booktitle {
     font-style: oblique;
 }
