--- a/css/components/elements/_prism.scss
+++ b/css/components/elements/_prism.scss
@@ -6,7 +6,7 @@
 // Default prism styling
 // Blocks
 pre[class*="language-"] {
-  margin: .5em 0;
+  margin: 0;
   overflow: auto;
   border: 1px solid #e1e1e1;
 }
